[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="players" type="Panel" parent="."]
visible = false
margin_left = 393.0
margin_top = 113.0
margin_right = 645.0
margin_bottom = 468.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="label" type="Label" parent="players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="start" type="Button" parent="players"]
margin_left = 68.0
margin_top = 307.0
margin_right = 193.0
margin_bottom = 336.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="list" type="ItemList" parent="players"]
margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="connect" type="Panel" parent="."]
margin_left = 370.0
margin_top = 157.0
margin_right = 647.0
margin_bottom = 324.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="name_label" type="Label" parent="connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="name" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Unnamed"

[node name="ip_label" type="Label" parent="connect"]
margin_left = 15.0
margin_top = 66.0
margin_right = 57.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"

[node name="ip" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="host" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 31.0
margin_right = 246.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="join" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 87.0
margin_right = 246.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="error_label" type="Label" parent="connect"]
margin_left = 17.0
margin_top = 143.0
margin_right = 259.0
margin_bottom = 157.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="board_sizes" type="HBoxContainer" parent="connect"]
margin_left = 14.0
margin_top = 123.0
margin_right = 40.0
margin_bottom = 40.0

[node name="col_label" type="Label" parent="connect/board_sizes"]
margin_right = 68.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Coloumns:"

[node name="cols" type="LineEdit" parent="connect/board_sizes"]
margin_left = 72.0
margin_right = 130.0
margin_bottom = 24.0
text = "7"
align = 1

[node name="row_label" type="Label" parent="connect/board_sizes"]
margin_left = 134.0
margin_right = 171.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Rows:"

[node name="rows" type="LineEdit" parent="connect/board_sizes"]
margin_left = 175.0
margin_right = 233.0
margin_bottom = 24.0
text = "6"
align = 1

[node name="error" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="class_selection" type="Panel" parent="."]
visible = false
margin_left = 240.0
margin_top = 20.0
margin_right = 790.0
margin_bottom = 120.0

[node name="class_selection_label" type="Label" parent="class_selection"]
margin_left = 120.0
margin_right = 420.0
margin_bottom = 14.0
text = "choose a class "
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="class_selection"]
margin_left = 20.0
margin_top = 30.0
margin_right = 530.0
margin_bottom = 70.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="warrior" type="Button" parent="class_selection/HBoxContainer"]
margin_left = 227.0
margin_right = 283.0
margin_bottom = 40.0
text = "warrior"

[node name="current_class_label" type="Label" parent="class_selection"]
margin_left = 120.0
margin_top = 80.0
margin_right = 370.0
margin_bottom = 94.0
text = "Your current class is: "
align = 1

[node name="class_name" type="Label" parent="class_selection"]
margin_left = 320.0
margin_top = 80.0
margin_right = 420.0
margin_bottom = 94.0
text = "warrior"
[connection signal="pressed" from="players/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="class_selection/HBoxContainer/warrior" to="." method="_on_warrior_pressed"]
